# mkits.py

./: .gitlab-ci.yml  MANIFEST.in  ReadMe.md  setup.cfg
openwrt_mkits/: __init__.py  __main__.py  uboot_constants.py
