[metadata]
name = mkits
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-libs/mkits.py
description = A rewrite of OpenWRT mkits.sh into python
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = mkits, OpenWRT
license = GPL-3.0-or-later
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: GNU General Public License (GPL)
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	fdt @ git+https://github.com/molejar/pyFDT.git
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
	console_scripts = 
		mkits = openwrt_mkits.__main__:CLI.run
